[package]
name = "rust_lib_xfdm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.35"
anyhow = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "io-util"] }
win32job = "2"

[build-dependencies]
anyhow = "1"